--- a/views/indexJquery.ejs
+++ b/views/indexJquery.ejs
@@ -27,8 +27,73 @@
 <body>
     <div class="container">
         <h1>BREADS (Browse, Read, Update, Delete, Sort)</h1>
-        <h4>Add Data</h4>
-        <form id="create-form">
+        <h4>Filters</h4>
+        <form id="filter-form">
+            <input type="hidden" name="page" value="1">
+            <div class="row mb-3">
+                <label for="inputId" class="col-sm-4 col-form-label">
+                    <input type="checkbox" name="checkId" id="checkId">
+                    ID
+                </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" id="idFilter" name="id">
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label for="inputStr" class="col-sm-4 col-form-label">
+                    <input type="checkbox" name="checkStr" id="checkStr">
+                    String
+                </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" id="strFilter" name="string">
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label for="inputInt" class="col-sm-4 col-form-label">
+                    <input type="checkbox" name="checkInt" id="checkInt">
+                    Integer
+                </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" id="intFilter" name="integer">
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label for="inputFloat" class="col-sm-4 col-form-label">
+                    <input type="checkbox" name="checkFloat" id="checkFloat">
+                    Float
+                </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" id="floatFilter" name="float">
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label for="inputDate" class="col-sm-4 col-form-label">
+                    <input type="checkbox" name="checkDate" id="checkDate">
+                    Date
+                </label>
+                <div class="col-sm-4">
+                    <input type="date" class="form-control" id="startDateFilter" name="startDate">
+                    to
+                    <input type="date" class="form-control" id="endDateFilter" name="endDate">
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label for="inputBol" class="col-sm-4 col-form-label">
+                    <input type="checkbox" name="checkBol" id="checkBol">
+                    Boolean
+                </label>
+                <div class="col-sm-8">
+                    <select name="boolean" id="booleanFilter" class="form-select">
+                        <option>Choose the boolean</option>
+                        <option value="true">True</option>
+                        <option value="false">False</option>
+                    </select>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Search</button>
+            <a href="/jquery" class="btn btn-secondary">Back</a>
+        </form>
+        <form id="create-form" style="display: none;">
             <input type="hidden" name="page" value="1">
             <div class="row mb-3">
                 <label for="inputId" class="col-sm-4 col-form-label">
@@ -84,95 +149,31 @@
             </div>
             <!-- <button class="btn btn-primary">Search</button> -->
             <button type="submit" class="btn btn-primary">Add</button>
-            <a href="/jquery" class="btn btn-secondary">Back</a>
+            <a class="btn btn-secondary" onclick="closeAdd()">Close</a>
         </form>
     </div>
     <br>
     <div class="container">
         <table class="table table-striped table-bordered">
-            <thead>
-                <tr align="center">
-                    <th>
-                        ID
-                        <a href="">
-                            <span class="fa fa-sort"></span>
-                        </a>
-                    </th>
-                    <th>
-                        String
-                        <a href="">
-                            <span class="fa fa-sort"></span>
-                        </a>
-                    </th>
-                    <th>
-                        Integer
-                        <a href="">
-                            <span class="fa fa-sort"></span>
-                        </a>
-                    </th>
-                    <th>
-                        Float
-                        <a href="">
-                            <span class="fa fa-sort"></span>
-                        </a>
-                    </th>
-                    <th>
-                        Date
-                        <a href="">
-                            <span class="fa fa-sort"></span>
-                        </a>
-                    </th>
-                    <th>
-                        Boolean
-                        <a href="">
-                            <span class="fa fa-sort"></span>
-                        </a>
-                    </th>
-                    <th>Action</th>
-                </tr>
+            <thead id="data-head">
             </thead>
             <tbody id="data-body">
             </tbody>
         </table>
         <br>
-        <div class="pagination" id="pagination">
-        </div>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination" id="pagination">
+            </ul>
+        </nav>
+        <button type="submit" onclick="showAdd()" class="btn btn-primary">Add</button>
     </div>
 
     <script type="text/javascript">
-        // document.addEventListener('DOMContentLoaded', () => {
-        //     const createForm = document.getElementById('create-form');
-        //     createForm.addEventListener('submit', createData);
-        //     readData()
-        // })
-        const readData = () => {
-            $.ajax({
-                method: "GET",
-                url: "http://localhost:3100/data"
-            }).done(function (data) {
-                let html = "";
-                data.data.forEach(item => {
-                    html += `
-                    <tr>
-                        <td>${item.number}</td>
-                        <td>${item.string}</td>
-                        <td>${item.integer}</td>
-                        <td>${item.float}</td>
-                        <td>${item.date}</td>
-                        <td>${item.boolean}</td>
-                        <td>
-                            <button class="btn btn-success btn-sm" onclick="updateData('${item._id}')">Edit</button>
-                            <button class="btn btn-danger btn-sm" onclick="deleteData('${item._id}')">Hapus</button>
-                        </td>
-                    </tr>`
-                });
-                $('#data-body').html(html)
-            }).fail((error) => {
-                console.error(error)
-            })
-        }
-
-
+        let params = {
+            page: 1,
+            sortby: '',
+            sortorder: ''
+        };
         $(document).ready(() => {
             $('#create-form').submit((event) => {
                 event.preventDefault();
@@ -184,8 +185,75 @@
                 const boolean = $('#boolean').val()
                 createData(number, string, integer, float, date, boolean)
             })
-        })
+        });
+        $(document).ready(() => {
+            $('#filter-form').submit((event) => {
+                event.preventDefault();
+                params.page = 1;
+                readData(getFilterParams());
+            })
+        });
+        function getFilterParams() {
+            const filterParams = {};
 
+            if ($("#checkId").is(":checked")) {
+                filterParams.checkId = true;
+                filterParams.id = $("#idFilter").val();
+            }
+
+            if ($("#checkStr").is(":checked")) {
+                filterParams.checkStr = true;
+                filterParams.string = $("#strFilter").val();
+            }
+
+            if ($("#checkInt").is(":checked")) {
+                filterParams.checkInt = true;
+                filterParams.integer = $("#intFilter").val();
+            }
+
+            if ($("#checkFloat").is(":checked")) {
+                filterParams.checkFloat = true;
+                filterParams.float = $("#floatFilter").val();
+            }
+
+            if ($("#checkDate").is(":checked")) {
+                filterParams.checkDate = true;
+                filterParams.startDate = $("#startDateFilter").val();
+                filterParams.endDate = $("#endDateFilter").val();
+            }
+
+            if ($("#checkBol").is(":checked")) {
+                filterParams.checkBol = true;
+                filterParams.boolean = $("#booleanFilter").val();
+            }
+
+            return filterParams;
+        }
+        const readData = (filterParams) => {
+            const mergedParams = { ...params, ...filterParams };
+            const queryString = Object.keys(mergedParams)
+                .filter((key) => mergedParams[key] !== '')
+                .map((key) => `${key}=${mergedParams[key]}`)
+                .join('&');
+
+            const url = `http://localhost:3100/data?${queryString}`;
+
+            $.ajax({
+                url: url,
+                method: 'GET'
+            })
+                .done(function (response) {
+                    const { data, page, pages, query, sortby, sortorder } = response;
+                    params.page = page;
+                    displayData(data, sortby, sortorder);
+                    pagination(page, pages);
+                    sortData(sortby, sortorder);
+                })
+                .fail(function (xhr, status, error) {
+                    console.log("Error: " + status);
+                    // Handle error, display a message
+                });
+        };
 
         const createData = (number, string, integer, float, date, boolean) => {
             $.ajax({
@@ -203,7 +271,7 @@
             }).fail((error) => {
                 console.log(error)
             })
-        }
+        };
 
         const updateData = (id) => {
             const number = $('#id').val();
@@ -257,8 +325,119 @@
             }).fail((error) => {
                 console.error(error);
             })
+        };
+
+        const displayData = (data) => {
+            let html = "";
+            data.forEach(item => {
+                html += `
+                    <tr>
+                        <td>${item.number}</td>
+                        <td>${item.string}</td>
+                        <td>${item.integer}</td>
+                        <td>${item.float}</td>
+                        <td>${item.date}</td>
+                        <td>${item.boolean}</td>
+                        <td>
+                            <button class="btn btn-success btn-sm" onclick="updateData('${item._id}')">Edit</button>
+                            <button class="btn btn-danger btn-sm" onclick="deleteData('${item._id}')">Hapus</button>
+                        </td>
+                    </tr>`
+            });
+            $('#data-body').html(html)
+        };
+        const sortData = (sortby, sortorder) => {
+            let html = `
+                <tr align="center">
+                    <th>
+                        ID
+                        <a href="javascript:void(0)" onclick="changeSort('number', '${sortby == 'number' && sortorder == 'asc' ? 'desc' : 'asc'}')">
+                            <span class="fa ${sortby === 'number' ? (sortorder === 'asc' ? 'fa-sort-up' : 'fa-sort-down') : 'fa-sort'}"></span>
+                        </a>
+                    </th>
+                    <th>
+
+                        String
+                        <a href="javascript:void(0)" onclick="changeSort('string', '${sortby == 'string' && sortorder == 'asc' ? 'desc' : 'asc'}')">
+                            <span class="fa ${sortby === 'string' ? (sortorder === 'asc' ? 'fa-sort-up' : 'fa-sort-down') : 'fa-sort'}"></span>
+                        </a>
+                    </th>
+                    <th>
+                        Integer
+                        <a href="javascript:void(0)" onclick="changeSort('integer', '${sortby == 'integer' && sortorder == 'asc' ? 'desc' : 'asc'}')">
+                            <span class="fa ${sortby === 'integer' ? (sortorder === 'asc' ? 'fa-sort-up' : 'fa-sort-down') : 'fa-sort'}"></span>
+                        </a>
+                    </th>
+                    <th>
+                        Float
+                        <a href="javascript:void(0)" onclick="changeSort('float', '${sortby == 'float' && sortorder == 'asc' ? 'desc' : 'asc'}')">
+                            <span class="fa ${sortby === 'float' ? (sortorder === 'asc' ? 'fa-sort-up' : 'fa-sort-down') : 'fa-sort'}"></span>
+                        </a>
+                    </th>
+                    <th>
+                        Date
+                        <a href="javascript:void(0)" onclick="changeSort('date', '${sortby == 'date' && sortorder == 'asc' ? 'desc' : 'asc'}')">
+                            <span class="fa ${sortby === 'date' ? (sortorder === 'asc' ? 'fa-sort-up' : 'fa-sort-down') : 'fa-sort'}"></span>
+                        </a>
+                    </th>
+                    <th>
+                        Boolean
+                        <a href="javascript:void(0)" onclick="changeSort('boolean', '${sortby == 'boolean' && sortorder == 'asc' ? 'desc' : 'asc'}')">
+                            <span class="fa ${sortby === 'boolean' ? (sortorder === 'asc' ? 'fa-sort-up' : 'fa-sort-down') : 'fa-sort'}"></span>
+                        </a>
+                    </th>
+                    <th>Action</th>
+                </tr>
+                `
+            $('#data-head').html(html)
+        };
+
+        const pagination = (currentPage, totalPages) => {
+            let html = `
+                <li class="page-item ${params.page == 1 ? 'disabled' : ''}">
+                    <a class="page-link" onclick="changePage(${currentPage - 1})">Previous</a>
+                </li>`;
+
+            for (let page = 1; page <= totalPages; page++) {
+                html += `
+                <li class="page-item ${page === currentPage ? 'active' : ''} ">
+                    <a class="page-link" onclick="changePage(${page})">${page}</a>
+                </li>`;
+            }
+
+            html += `
+                <li class="page-item ${params.page == totalPages ? 'disabled' : ''}">
+                    <a class="page-link"  onclick="changePage(${currentPage + 1})">Next</a>
+                </li>`;
+
+            $("#pagination").html(html)
+        };
+
+        const changePage = (page) => {
+            params.page = page;
+            if (params.sortby) {
+                readData({ sortby: params.sortby, ...getFilterParams(), sortorder: params.sortorder, page: page });
+            } else {
+                readData({ ...getFilterParams(), page: page });
+            }
         }
-        readData()
+
+        const changeSort = (sortby, sortorder) => {
+            console.log(`SortBy: ${sortby}, SortOrder: ${sortorder}`);
+            params.sortby = sortby; // Update sortby parameter in params
+            params.sortorder = sortorder; // Update sortorder parameter in params
+            readData({ sortby, sortorder, ...getFilterParams(), page: params.page }); // Pass sorting parameters and current page
+        }
+        const showAdd = () => {
+            $('#create-form').show()
+        };
+
+        const closeAdd = () => {
+            $('#create-form').hide()
+        };
+        readData(params)
+
+
     </script>
 </body>
 
